@startuml

' CLASES PRINCIPALES

class Usuario {
  id: number
  nombre: string
  apellido: string
  documento: string
  puntos: number
  rol: Rol
}

class Empresa {
  id: number
  nombre_empresa: string
  cuit: string
  rubro: string
  verificada: boolean
}

class Organizacion {
  id: number
  nombre_organizacion: string
  cuit: string
  verificada: boolean
}

class Campaigns {
  id: number
  titulo: string
  descripcion: string
  estado: CampaignEstado
  objetivo: number
}

class Donaciones {
  id: number
  titulo: string
  cantidad: number
  estado: DonacionEstado
  puntos: number
}

class Beneficios {
  id: number
  titulo: string
  tipo: string
  valor: number
  estado: BeneficioEstado
}

class UsuarioBeneficio {
  id: number
  cantidad: number
  usados: number
  estado: BeneficiosUsuarioEstado
}

class EmpresaUsuario {
  id: number
  rol: RolSecundario
  activo: boolean
}

class OrganizacionUsuario {
  id: number
  rol: RolSecundario
  activo: boolean
}

class Invitacion {
  id: number
  token: string
  correo: string
  rol: RolSecundario
}

class RankingDonador {
  id_usuario: number
  puntos: number
}

class Contacto {
  id: number
  correo: string
}

class Direccion {
  id: number
  ciudad: string
  provincia: string
}

class imagenes_campania {
  id: number
  imagen: string
  esPortada: boolean
}


' RELACIONES

' Usuario
Usuario "1" -- "0..*" Donaciones
Usuario "1" -- "0..*" UsuarioBeneficio
Usuario "1" -- "0..*" EmpresaUsuario
Usuario "1" -- "0..*" OrganizacionUsuario
Usuario "1" -- "0..1" RankingDonador

' Empresa
Empresa "1" -- "0..*" Beneficios
Empresa "1" -- "0..*" EmpresaUsuario

' Organizacion
Organizacion "1" -- "0..*" Campaigns
Organizacion "1" -- "0.." OrganizacionUsuario

' Campaigns
Campaigns "1" -- "0..*" Donaciones
Campaigns "1" -- "0..*" imagenes_campania

' Beneficios
Beneficios "1" -- "0..*" UsuarioBeneficio

' Invitaciones
Invitacion "0..*" -- "0..1" Usuario : invitado
Invitacion "0..*" -- "0..1" Empresa
Invitacion "0..*" -- "0..1" Organizacion

' Contacto y Dirección
Usuario "1" --> "1" Contacto
Usuario "1" --> "0..1" Direccion

Empresa "1" --> "1" Contacto
Empresa "1" --> "0..1" Direccion

Organizacion "1" --> "1" Contacto
Organizacion "1" --> "0..1" Direccion

@enduml